force-app/main/default/objects/Program_Relationship__c/Program_Relationship__c.object-meta.xml
<CustomObject>
    <label>Program Relationship</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Program Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>