force-app/main/default/objects/Program_Relationship__c/fields/Coordinating_Program__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program__c</fullName>
    <label>Coordinating Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Relationships</relationshipLabel>
    <relationshipName>Program_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>