force-app/main/default/objects/Program_Relationship__c/fields/Local_Program__c.field-meta.xml
<CustomField>
    <fullName>Local_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Program</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Account should be a Local Program</errorMessage>
        <filterItems>
            <field>Account.Program_Type__c</field>
            <operation>equals</operation>
            <value>Local Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Relationships (Local Program)</relationshipLabel>
    <relationshipName>Program_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>