force-app/main/default/objects/Program_Relationship__c/fields/Local_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Program_Name__c</fullName>
    <formula>Local_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Program Name</label>
    <type>Text</type>
</CustomField>