force-app/main/default/objects/Program_Relationship__c/fields/Not_paying_for_this_term__c.field-meta.xml
<CustomField>
    <fullName>Not_paying_for_this_term__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option only if the CP opts not to cover payment for the LP next term</inlineHelpText>
    <label>Not paying for Next Term</label>
    <type>Checkbox</type>
</CustomField>