force-app/main/default/objects/Program_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <inlineHelpText>Financially Supported: The CP pays for the LP.
Jurisdictional: The LP pays for itself.</inlineHelpText>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pays LP Membership</fullName>
            </value>
            <value>
                <fullName>Jurisdictional</fullName>
            </value>
            <value>
                <fullName>Financially Supported</fullName>
                <isActive>false</isActive>
                <label>Financially Supported</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>