force-app/main/default/objects/Program_Relationship__c/fields/TermYear__c.field-meta.xml
<CustomField>
    <fullName>TermYear__c</fullName>
    <formula>YEAR( Term_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the year of Program Relationship. The year is calculated based on the term end added in the relationship form.</inlineHelpText>
    <label>Term Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>