force-app/main/default/objects/Program_Relationship__c/listViews/All_Program_Relationships.listView-meta.xml
<ListView>
    <fullName>All_Program_Relationships</fullName>
    <columns>NAME</columns>
    <columns>Local_Program__c</columns>
    <columns>Coordinating_Program__c</columns>
    <columns>TermYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Program Relationships</label>
</ListView>